# dioxus-epatent

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile  README.md  package-lock.json  tailwind.config.js
public/: tailwind.css
src/: main.rs  route.rs
src/app/: blog.rs
src/app/home/: login.rs  mod.rs
src/app/home/navbar/: mod.rs
src/component/: mod.rs
