[package]
name = "dioxus-epatent"
version = "0.1.0"
authors = ["tawan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus-web = { version = "0.4" }
dioxus = { version = "0.4" }

dioxus-router = { version = "0.4", features = ["web"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"

console_error_panic_hook = "0.1.7"

[workspace]
members = [
    # -- Application Libraries
    "crates/libs/lib-utils", # e.g., base64, time.
    # "crates/libs/lib-rpc", # e.g., rpc routing.
    # "crates/libs/lib-auth", # e.g., for pwd, token.
    # "crates/libs/lib-core", # e.g., model, ctx, config.

]

[workspace.lints.rust]
unsafe_code = "forbid"
